--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
   
   <body>
+  
+  <style></style>
+
+  
+  <body>
    
 <header>
       <img src="https://i.imgur.com/jlhKpWV.jpg?2" title="woman in yoga pose"  width=100%/></a>
@@ -123,15 +128,15 @@
     <section>
    <div class="footer flex-container" > 
   <a href="https://linkedin.com">
-<img src="https://i.imgur.com/e4jAx6p.png?1" target="blank" title="follow us on linkedin"/></a> 
+<img src="https://i.imgur.com/e4jAx6p.png?1" target="blank" alt="follow us on linkedin"/></a> 
 
-<a href="https://facebook.com"><img src="https://i.imgur.com/HKNSJSj.png?1" title="follow us on facebook" /></a>
+<a href="https://facebook.com"><img src="https://i.imgur.com/HKNSJSj.png?1" target="blank" alt="follow us on facebook" /></a>
 
-<a href="https://twitter.com"><img src="https://i.imgur.com/XsAydYK.png?1" title="follow us on twitter" /></a>
+<a href="https://twitter.com"><img src="https://i.imgur.com/XsAydYK.png?1" target="blank" alt="follow us on twitter" /></a>
 
-<a href="https://instagram.com"><img src="https://i.imgur.com/eaUWTkU.png?1" title="follow us on instagram" /></a>
+<a href="https://instagram.com"><img src="https://i.imgur.com/eaUWTkU.png?1" target="blank" alt="follow us on instagram" /></a>
 
-     <p>&copy mindfulness and yoga 2022</p>
+     <p text-align="center">&copy mindfulness and yoga 2022</p>
 </section>
 </footer>
   </div>
