--- a/meditation.html
+++ b/meditation.html
@@ -18,7 +18,7 @@
   <body align="center">
    
 <header>
-      <a href="https://imgur.com/jlhKpWV"><img src="https://i.imgur.com/jlhKpWV.jpg?2" title="source: imgur.com"  width=100%/></a>
+      <img src="https://i.imgur.com/jlhKpWV.jpg?2" title="source: imgur.com"  width=100%/></a>
     <div class="topnav">
   <a class="active" href="index.html">Home</a>
   <a href="yoga.html">Yoga</a>
@@ -31,12 +31,11 @@
     <div class="container">
 <p>Meditation is a practice in which an individual uses a technique – such as mindfulness, or focusing the mind on a particular object, thought, or activity – to train attention and awareness, and achieve a mentally clear and emotionally calm and stable state.
 
- Meditation is practiced in numerous religious traditions. The earliest records of meditation (dhyana) are found in the Upanishads of Hindu philosophy, and meditation plays a salient role in the contemplative repertoire of Buddhism and Hinduism. Since the 19th century, Asian meditative techniques have spread to other cultures where they have also found application in non-spiritual contexts, such as business and health.   </p> 
+ Meditation is practiced in numerous religious traditions. The earliest records of meditation (dhyana) are found in the Upanishads of Hindu philosophy, and meditation plays a salient role in the contemplative repertoire of Buddhism and Hinduism. Since the 19th century, Asian meditative techniques have spread to other cultures where they have also found application in non-spiritual contexts, such as business and health.</p>
+  
+<p><h2>Here is a video from Deepak Chopra on how to meditate.</h2></p> 
    </body>
    <iframe width="560" height="315" src="https://www.youtube.com/embed/3V0TKB1_m4Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
-
 
    </div>
   
