--- a/yoga.html
+++ b/yoga.html
@@ -28,7 +28,7 @@
   <a href="about.html">About</a>
 </header>
      <fieldset>
-      <legend><h1> Vinyasa Yoga</h1></legend>
+      <h1> Vinyasa Yoga</h1>
      <div class="container">
   
     <p>Ashtanga Vinyasa Yoga students are expected to memorize a sequence and to practice in the same room as others without being led by the teacher. The role of the teacher is to guide as well as provide adjustments or assist in postures. In other locations, led classes are taught twice per week in place of Mysore style classes, and the teacher will lead a group through the same series at the same time. The led classes were only introduced in K. Pattabhi Jois's senior years.</p>
